[package]
name = "polkadot-collator-protocol-test-sim-macros"
version = "0.1.0"
description = "Proc-macros for the polkadot-collator-protocol-test-sim test framework."
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
# `ItemFn` (parsing the annotated scenario fn) lives behind syn's `full` feature. Declare it
# directly — `cargo check` per-crate sees no feature unification from sibling crates.
syn = { workspace = true, features = ["full"] }
