[package]
name = "westend-emulated-chain"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Westend emulated chain"
publish = false

[lints]
workspace = true

[dependencies]
# Substrate
pallet-staking = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sp-authority-discovery = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-beefy = { workspace = true, default-features = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

# Polkadot
polkadot-primitives = { workspace = true }
westend-runtime = { workspace = true, default-features = true }
westend-runtime-constants = { workspace = true }

# Cumulus
emulated-integration-tests-common = { workspace = true }
parachains-common = { workspace = true, default-features = true }

[features]
runtime-benchmarks = [
	"emulated-integration-tests-common/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"westend-runtime-constants/runtime-benchmarks",
	"westend-runtime/runtime-benchmarks",
]
try-runtime = [
	"emulated-integration-tests-common/try-runtime",
	"pallet-staking/try-runtime",
	"parachains-common/try-runtime",
	"sp-runtime/try-runtime",
	"westend-runtime/try-runtime",
]
